# my_fastapi_svelte_template

./: .gitignore  README.md  dev.sh  pyproject.toml
backend/app/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.svelte  app.css
