[project]
name = "mySvelteFastApp"
version = "0.1.0"
description = "a fastapi + svelte template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
]
classifiers = [
    "Programming Language :: Python :: 3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"] 